# gudhi-devel

src/Alpha_complex/utilities/: CMakeLists.txt  alpha_complex_3d_persistence_atoms_centers.cpp  alpha_complex_persistence_xyz_file.cpp  four_points.xyz  shifted_sphere.xyz  sphere.xyz  sphere_of_oxygens.xyz  sphere_rad_10.xyz  two_points.xyz
src/Bitmap_cubical_complex/utilities/: CMakeLists.txt  common_cube_files.h  compute_persistence_of_a_cube_file.cpp  compute_persistence_of_a_cube_file_no_blowup.cpp
src/Bitmap_cubical_complex/utilities/benchmark_cube_files/: 3_d_swiss_cross.cube  README  emmerging_pipe_in_z_direction.cube  sphere.cube  x_direction_shifted_sphere.cube  y_direction_shifted_sphere.cube  z_direction_shifted_sphere.cube
